--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,11 +3,11 @@
     <h3>Profile</h3>
   </div>
   <div class="panel-body">
-    <img src="{{profile?.picture}}" class="avatar" alt="avatar">
+    <img src="{{profile?.picture}}" class="avatar" alt="avatar" width="100px" height="100px"/>
     <div>
       <label>
-        <i class="glyphicon glyphicon-user"></i> Nickname</label>
-      <h3 class="nickname">{{ profile?.nickname }}</h3>
+        <i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp;Name</label>
+      <h3 class="nickname">{{ profile?.name }}</h3>
     </div>
     <pre class="full-profile">{{ profile | json }}</pre>
   </div>
